<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

	<Preference
		android:key="about_version"
		android:title="@string/about_version_title" />
	<Preference
		android:summary="© 2011-2014, Andreas Schildbach\n© 2014, Rimbit Developers\n© 2014, Matthew Mitchell"
		android:title="@string/about_copyright_title" />
	<Preference
		android:key="about_license"
		android:summary="https://www.gnu.org/licenses/gpl-3.0.txt"
		android:title="@string/about_license_title" >
		<intent
			android:action="android.intent.action.VIEW"
			android:data="https://www.gnu.org/licenses/gpl-3.0.txt" />
	</Preference>
	<Preference
		android:key="about_source"
		android:summary="https://github.com/MatthewLM/peercoin-android-wallet"
		android:title="@string/about_source_title" >
		<intent
			android:action="android.intent.action.VIEW"
			android:data="https://github.com/MatthewLM/peercoin-android-wallet" />
	</Preference>
	<Preference
		android:key="about_market_app"
		android:summary="@string/about_market_app_summary"
		android:title="@string/about_market_app_title" />
	<Preference
		android:key="about_twitter"
		android:summary="\@Matt_von_Mises"
		android:title="Twitter" >
		<intent
			android:action="android.intent.action.VIEW"
			android:data="https://twitter.com/#!/Matt_von_Mises" />
	</Preference>
	<Preference
		android:key="about_credits_peercoinj"
		android:summary="https://github.com/MatthewLM/peercoinj" >
		<intent
			android:action="android.intent.action.VIEW"
			android:data="https://github.com/MatthewLM/peercoinj" />
	</Preference>
    <Preference
        android:key="about_market_publisher"
        android:title="@string/about_credits_market_publisher_title"
        android:summary="@string/about_credits_market_publisher_summary" >	
        <intent
            android:action="android.intent.action.VIEW"
            android:data='market://search?q=pub:"Matthew+Mitchell"' />
    </Preference>
    <Preference
		android:key="about_credits_zxing"
		android:summary="https://github.com/zxing/zxing"
		android:title="@string/about_credits_zxing_title" >
		<intent
			android:action="android.intent.action.VIEW"
			android:data="https://github.com/zxing/zxing" />
	</Preference>
</PreferenceScreen>
